Added Mercury details and menu with pictures, next up will work on the missions that researched it, tried to make it visible in one activity, didn't quite work out (text too tall to view without very small letters or a scrolling view), to replace with a similar setting as with sun missions tab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SunResearchMissions"></activity>
+        <activity android:name=".MercuryDetails" />
+        <activity android:name=".MercuryMenu" />
+        <activity android:name=".SunResearchMissions" />
         <activity android:name=".SunDetails" />
         <activity android:name=".SunMenu" />
         <activity android:name=".MainActivity">
