Added the menu for Venus as well as details view, pictures of it and finished mercury missions, both present and past.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".VenusDetails"></activity>
+        <activity android:name=".VenusMenu" />
+        <activity android:name=".MercuryResearchMissions" />
         <activity android:name=".MercuryDetails" />
         <activity android:name=".MercuryMenu" />
         <activity android:name=".SunResearchMissions" />
