--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VenusDetails"></activity>
+        <activity android:name=".VenusResearchMissions"></activity>
+        <activity android:name=".VenusDetails" />
         <activity android:name=".VenusMenu" />
         <activity android:name=".MercuryResearchMissions" />
         <activity android:name=".MercuryDetails" />
