Added finished missions from 88-99, created views for finished missions for mars and ongoing missions for mars and venus, added one ongoing mission for venus and added mars mission menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MarsDetails"></activity>
+        <activity android:name=".MarsResearchMissions"></activity>
+        <activity android:name=".MarsDetails" />
         <activity android:name=".MarsMenu" />
         <activity android:name=".VenusResearchMissions" />
         <activity android:name=".VenusDetails" />
