--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MarsResearchMissions"></activity>
+        <activity android:name=".EarthDetails"></activity>
+        <activity android:name=".EarthMenu" />
+        <activity android:name=".MarsResearchMissions" />
         <activity android:name=".MarsDetails" />
         <activity android:name=".MarsMenu" />
         <activity android:name=".VenusResearchMissions" />
