Started describing past Jupiter missions
Added the fragment for them

Implemented the Jupiter mission menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JupiterMenu"></activity>
+        <activity android:name=".JupiterResearchMissions"></activity>
+        <activity android:name=".JupiterDetails" />
+        <activity android:name=".JupiterMenu" />
         <activity android:name=".EarthLiveTest" />
         <activity android:name=".EarthDetails" />
         <activity android:name=".EarthMenu" />
