--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SaturnResearchMissions"></activity>
+        <activity android:name=".UranusResearchMissions"></activity>
+        <activity android:name=".UranusDetails" />
+        <activity android:name=".UranusMenu" />
+        <activity android:name=".SaturnResearchMissions" />
         <activity android:name=".SaturnDetails" />
         <activity android:name=".SaturnMenu" />
         <activity android:name=".JupiterResearchMissions" />
